<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/select"
        layout="@layout/appbar_for_maps_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/select"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSecondary"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.CardView
                    android:id="@+id/passport_pic_holder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:visibility="gone"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:divider="?android:dividerHorizontal"
                        android:dividerPadding="5dp"
                        android:orientation="vertical"
                        android:showDividers="middle">

                        <TextView
                            android:id="@+id/passport_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:fontFamily="@font/core_regular"
                            android:text="@string/your_passport_photo"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp" />

                        <ImageView
                            android:id="@+id/passport_image"
                            android:layout_width="155dp"
                            android:layout_height="135dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="5dp"
                            android:src="@drawable/pictures_icon" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <LinearLayout
                    android:id="@+id/story_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/passport_pic_holder"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/story_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/core_regular"
                        android:text="@string/story_images"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/another_story_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:background="@color/colorButton"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:text="Add Another Story"
                        android:textColor="@android:color/white" />


                    <android.support.v7.widget.CardView
                        android:id="@+id/story_pic_holder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:visibility="gone"
                        app:cardCornerRadius="4dp"
                        app:cardElevation="4dp"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:divider="?android:dividerHorizontal"
                            android:dividerPadding="5dp"
                            android:orientation="vertical"
                            android:showDividers="middle">

                            <ImageView
                                android:id="@+id/story_image"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="5dp"
                                android:src="@drawable/pictures_icon" />

                            <EditText
                                android:id="@+id/story_desc"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/core_regular"
                                android:gravity="center"
                                android:hint="@string/write_something_about_this_picture"
                                android:textSize="20sp" />

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                </LinearLayout>

                <ImageView
                    android:id="@+id/pictures_image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/pictures_icon" />

            </RelativeLayout>


        </LinearLayout>

    </ScrollView>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        fab:menu_animationDelayPerItem="50"
        fab:menu_backgroundColor="@android:color/transparent"
        fab:menu_buttonSpacing="0dp"
        fab:menu_colorNormal="@color/colorPrimary"
        fab:menu_colorPressed="#3CB371"
        fab:menu_fab_label="@string/fab_close"
        fab:menu_fab_size="normal"
        fab:menu_icon="@drawable/fab_add"
        fab:menu_labels_colorNormal="#333333"
        fab:menu_labels_colorPressed="#444444"
        fab:menu_labels_cornerRadius="3dp"
        fab:menu_labels_ellipsize="none"
        fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        fab:menu_labels_margin="0dp"
        fab:menu_labels_maxLines="-1"
        fab:menu_labels_padding="8dp"
        fab:menu_labels_paddingBottom="4dp"
        fab:menu_labels_paddingLeft="8dp"
        fab:menu_labels_paddingRight="8dp"
        fab:menu_labels_paddingTop="4dp"
        fab:menu_labels_position="left"
        fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        fab:menu_labels_showShadow="true"
        fab:menu_labels_singleLine="false"
        fab:menu_labels_textColor="#FFFFFF"
        fab:menu_labels_textSize="14sp"
        fab:menu_openDirection="up"
        fab:menu_shadowColor="#66000000"
        fab:menu_shadowRadius="4dp"
        fab:menu_shadowXOffset="1dp"
        fab:menu_shadowYOffset="2dp"
        fab:menu_showShadow="true">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_passport_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_passport_image"
            fab:fab_colorNormal="#3CB371"
            fab:fab_colorPressed="#3CB371"
            fab:fab_label="@string/add_passport_image"
            fab:fab_shadowColor="#66000000"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_story_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_story_image"
            fab:fab_colorNormal="#3CB371"
            fab:fab_colorPressed="#3CB371"
            fab:fab_label="@string/add_story_image"
            fab:fab_shadowColor="#66000000"
            fab:fab_size="mini" />

    </com.github.clans.fab.FloatingActionMenu>

</RelativeLayout>