<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/modified"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".RegisterActivity">

    <include
        android:id="@+id/registration"
        layout="@layout/appbar_for_registeration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:id="@+id/elevationup"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/select"
        android:background="@drawable/shadow" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:padding="10dp"
                android:textColorHint="#ffffff">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputEditTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:hint="@string/hint_name"
                    android:fontFamily="@font/core_regular"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:textColorHint="#ffffff">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputEditTextUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:hint="Username"
                    android:inputType="text"
                    android:fontFamily="@font/core_regular"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutContactNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:textColorHint="#ffffff">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputEditTextContactNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:fontFamily="@font/core_regular"
                    android:hint="Contact_No"
                    android:inputType="number"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/awcText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="Select AWC"
                android:textColor="@android:color/white"
                android:fontFamily="@font/core_regular"
                android:textSize="20sp" />

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/spinnerAwc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:background="@android:drawable/btn_dropdown"
                android:gravity="center"
                android:padding="5dp"
                android:fontFamily="@font/core_regular"
                android:spinnerMode="dropdown"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:textColorHint="#ffffff">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputEditTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/core_regular"
                    android:background="@drawable/border"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:textColorHint="#ffffff"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputEditTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:hint="@string/hint_password"
                    android:fontFamily="@font/core_regular"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:textColorHint="#ffffff"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputEditTextConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:fontFamily="@font/core_regular"
                    android:hint="@string/hint_confirm_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/hiddenGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3"
                android:fontFamily="@font/core_regular"
                android:visibility="gone" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/appCompatButtonRegister"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/on_pressed_color"
                android:text="@string/text_register"
                android:fontFamily="@font/core_regular"
                android:textColor="#008558" />

            <View
                android:id="@+id/elevation"
                android:layout_width="95dp"
                android:layout_height="4dp"
                android:layout_below="@+id/table"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/shadow" />


            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/appCompatTextViewLoginLink"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:fontFamily="@font/core_regular"
                android:text="Already a member? Login"
                android:textColor="@drawable/text_on_pressed_color"
                android:textSize="16dp" />

            <View
                android:layout_width="170dp"
                android:layout_height="1dp"
                android:layout_below="@+id/text"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:background="#D7DBB8" />
        </LinearLayout>
    </ScrollView>
</android.support.v7.widget.LinearLayoutCompat>

